<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class NettoyageUnitaire extends Model
{
    use HasFactory;
}
