<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up()
    {
        Schema::create('services', function (Blueprint $table) {
            $table->id();
            
            // Champs communs à tous les services (classe parente)
            $table->string('nom');
            $table->text('description');
            $table->integer('duree_prevue')->nullable(); // En minutes
            $table->string('adresse')->nullable();
            $table->boolean('est_actif')->default(true);
            $table->string('image')->nullable();
            
            $table->timestamps();
        });
    }

    public function down()
    {
        Schema::dropIfExists('services');
    }
};